<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60px"
        android:layout_marginRight="21px"
        android:layout_marginLeft="21px"
        android:layout_marginBottom="21px"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="98dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:textColor="@color/fundoedt"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_bg"
            android:drawableLeft="@drawable/ic_logi"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:foregroundGravity="clip_horizontal"
            android:hint="@string/enter_your_email"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="60px"
            android:background="@drawable/round_bg"
            android:drawableLeft="@drawable/ic_key"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSenha"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/background"
                android:text="@string/create_account"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_singUp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/background"
                android:text="@string/sing_up"
                android:textColor="#fff" />


        </LinearLayout>



        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>
    <Button
        android:id="@+id/logInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo"
        android:background="@drawable/round_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/login_with_google" />
    <Button
        android:id="@+id/logOutGoogle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_alignParentLeft="true"
        android:background="@drawable/round_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text=" Logout " />
    <Button
        android:id="@+id/GoToHome"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text=" Go Home " />

</RelativeLayout>